--- a/core/plugins.yaml
+++ b/core/plugins.yaml
@@ -122,6 +122,8 @@
     let g:gutentags_generate_on_new = 0
     let g:gutentags_exclude_filetypes = [ 'defx', 'denite', 'vista', 'magit' ]
 
+- repo: preservim/tagbar
+
 - repo: t9md/vim-choosewin
   on_map: { n: <Plug> }
   hook_source: source  $VIM_PATH/modules/module-choosewin.vim
